hphp/hack/test/typecheck/subtype_funs2.php.exp
File "subtype_funs2.php", line 15, characters 5-17:
Invalid assignment (Typing[4110])
File "subtype_funs2.php", line 13, characters 24-26:
Expected int
File "subtype_funs2.php", line 14, characters 44-48:
But got mixed
